# rust-mnist

./: Cargo.toml
src/: activation.rs  cost.rs  dataset.rs  image.rs  main.rs  network.rs
