[package]
name = "mnist"
version = "0.1.0"
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
rand = "0.7.3"
ndarray = "0.13.1"
ndarray-rand = "0.11.0"
rand_distr = "0.2.2"